compile warning: kfd_topology.c:2082:1: warning: the frame size of 1440 bytes is larger than 1024 bytes
Noticed this warning when compiling the latest Linus master v6.6-rc2-48-g42dc814987c1
drivers/gpu/drm/amd/amdgpu/../amdkfd/kfd_topology.c: In function ‘kfd_topology_add_device’:
drivers/gpu/drm/amd/amdgpu/../amdkfd/kfd_topology.c:2082:1: warning: the frame size of 1440 bytes is larger than 1024 bytes [-Wframe-larger-than=]
2082 | }
| ^